--- a/server/package.json
+++ b/server/package.json
@@ -31,11 +31,11 @@
         "@types/bcryptjs": "2.4.6",
         "@types/body-parser": "1.19.5",
         "@types/cors": "2.8.17",
-        "@types/express": "^5.0.0",
+        "@types/express": "5.0.0",
         "@types/jsonwebtoken": "9.0.7",
-        "@types/mongoose": "^5.11.97",
-        "@types/node": "^22.9.0",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.6.3"
+        "@types/mongoose": "5.11.97",
+        "@types/node": "22.9.0",
+        "ts-node": "10.9.2",
+        "typescript": "5.6.3"
     }
 }
